# product-shop

./: .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/backend/: app.py  settings.py  urls.py
backend/categories/: admin.py  models.py  schema.py
backend/categories/migrations/: 0001_initial.py
backend/orders/: admin.py  api.py  models.py  schema.py
backend/orders/migrations/: 0001_initial.py
backend/product_shop/: admin.py  api.py  apps.py  models.py  schemae.py
backend/product_shop/migrations/: 0001_initial.py  0002_auto_20201107_1021.py  0003_auto_20201107_1613.py  0004_auto_20201108_0629.py  0005_auto_20201108_0631.py  0006_auto_20201108_1336.py  0007_auto_20201110_1108.py
frontend/: Dockerfile  DockerfileDev  README.md  docker-compose.yml  package-lock.json  package.json
frontend/app/: index.html
frontend/app/adapters/: application.js
frontend/app/controllers/admin/: categories.js
frontend/app/routes/: admin.js
frontend/app/routes/admin/: categories.js
frontend/app/templates/: admin.hbs  application.hbs  index.hbs
frontend/app/templates/admin/: categories.hbs
frontend/config/: environment.js
frontend/mirage/: config.js
frontend/mirage/factories/: category.js
frontend/mirage/scenarios/: default.js
frontend/tests/: index.html
frontend/tests/unit/controllers/admin/: categories-test.js
